# E-Detection-OSS

./: .editorconfig  .gitignore  E-anomaly_detector-Portable_version-v20260520.py  README.md  config.json  pyproject.toml  requirements.txt  run_check.py  run_check_v2.py
.github/workflows/: desktop.yml
core/: __init__.py  rule_base.py  rules.py
desktop/: EDetection.Desktop.slnx  NATIVE_BACKEND_MIGRATION.md  README.md
desktop/EDetection.Desktop/: App.xaml  App.xaml.cs  EDetection.Desktop.csproj  GlobalUsings.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
desktop/EDetection.Desktop.Tests/: EDetection.Desktop.Tests.csproj  Program.cs  RegressionSuite.cs  TestSupport.cs
desktop/EDetection.NativeCore/: EDetection.NativeCore.csproj
desktop/installer/: E-Detection.Desktop.iss
desktop/scripts/: Build-DesktopInstaller.ps1  DesktopPathSafety.ps1  Install-Desktop.ps1  Publish-Desktop.ps1  Sign-DesktopArtifacts.ps1  Test-DesktopBundledPythonSmoke.ps1  Test-DesktopDiagnosticsRedactionSmoke.ps1  Test-DesktopEnvironmentRepairSmoke.ps1  Test-DesktopGlobalHotkeySmoke.ps1  Test-DesktopInstallSmoke.ps1  Test-DesktopInstallerSmoke.ps1  Test-DesktopInstallerStatic.ps1  Test-DesktopKeyboardSmoke.ps1  Test-DesktopPackageHealth.ps1  (+16 more)
e_detection/: __init__.py  batch.py  cli.py  excel_report.py  llm_context.py  llm_report.py  pipeline.py  report_model.py  settings.py
tests/: __audit.txt  conftest.py  test_excel_report.py  test_json_events.py  test_llm_report.py  test_pipeline_normalization.py  test_pipeline_samples.py  test_report_model.py  test_rules.py  test_settings.py
(+107 files in other folders)
