[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-detection"
version = "0.2.0"
description = "Electrical parameter anomaly detection for SCADA CSV reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2",
    "customtkinter>=5.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
e-detection = "e_detection.cli:main"

[tool.setuptools]
packages = ["core", "e_detection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
